fix menu bar dropdown item alignment

--- a/softWrench.sW4.Web/Content/styles/default/site.css
+++ b/softWrench.sW4.Web/Content/styles/default/site.css
@@ -727,6 +727,10 @@ Header
             text-align: center;
         }
 
+        .container header .menu-grid .submenu li a {
+            text-align: left;
+        }
+
 /*SM - 10/06 - SWWEB-435*/
 .container .context {
     width: 100%;
